[gd_scene load_steps=2 format=2]

[ext_resource path="res://PlayerMenu.gd" type="Script" id=1]

[node name="PlayerMenu" type="MarginContainer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -86.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="VBoxContainer" parent="."]
margin_right = 128.0
margin_bottom = 86.0

[node name="PlayerOne" type="Label" parent="Players"]
margin_right = 128.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="PlayerTwo" type="Label" parent="Players"]
margin_top = 18.0
margin_right = 128.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="PlayerThree" type="Label" parent="Players"]
margin_top = 36.0
margin_right = 128.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="PlayerFour" type="Label" parent="Players"]
margin_top = 54.0
margin_right = 128.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="PlayerFive" type="Label" parent="Players"]
margin_top = 72.0
margin_right = 128.0
margin_bottom = 86.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
